<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="horizontal"
    android:gravity="center"
    >

    <LinearLayout
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/placeholder"
            android:hint="@string/placeholder"
            android:inputType="text"
            android:singleLine="true" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/pad"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/input"
        android:layout_gravity="center"
        android:columnCount="3"
        android:rowCount="3"
        >

        <Button
            android:id="@+id/buttonLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/left"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />

        <Button
            android:id="@+id/buttonUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/up"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />

        <Button
            android:id="@+id/buttonDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/down"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />

        <Button
            android:id="@+id/buttonRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/right"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />
    </GridLayout>

    <GridLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/input"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginTop="-5dp"
        android:columnCount="3"
        android:rowCount="3">

        <Button
            android:id="@+id/buttonY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/y" />

        <Button
            android:id="@+id/buttonX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/x" />

        <Button
            android:id="@+id/buttonB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/b" />

        <Button
            android:id="@+id/buttonA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/a" />
    </GridLayout>


</RelativeLayout>